SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/fields/CurrentExerciseStart__c.field-meta.xml
<CustomField>
    <fullName>CurrentExerciseStart__c</fullName>
    <label>Current Exercise Start</label>
    <type>DateTime</type>
</CustomField>