SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/fields/Instructor__c.field-meta.xml
<CustomField>
    <fullName>Instructor__c</fullName>
    <label>Instructor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Andres Perez</fullName>
                <default>true</default>
                <label>Andres Perez</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>