SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/fields/InstructorLookup__c.field-meta.xml
<CustomField>
    <fullName>InstructorLookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Instructor</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Attendee selected must be an instructor master record</errorMessage>
        <filterItems>
            <field>Attendee__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Instructor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>