SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/fields/InstructorName__c.field-meta.xml
<CustomField>
    <fullName>InstructorName__c</fullName>
    <formula>InstructorLookup__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instructor Name</label>
    <type>Text</type>
</CustomField>