SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/fields/InstructorText__c.field-meta.xml
<CustomField>
    <fullName>InstructorText__c</fullName>
    <label>InstructorText</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Andres Perez</fullName>
                <default>true</default>
                <label>Andres Perez</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>