SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/fields/OrgFirstNumber__c.field-meta.xml
<CustomField>
    <fullName>OrgFirstNumber__c</fullName>
    <label>Org First Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>