SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/fields/OrgLastNumber__c.field-meta.xml
<CustomField>
    <fullName>OrgLastNumber__c</fullName>
    <label>Org Last Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>