SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/validationRules/Active_Delivery_Requires_Instructor.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Delivery_Requires_Instructor</fullName>
    <active>true</active>
    <errorConditionFormula>IsActive__c &amp;&amp; InstructorLookup__c == null</errorConditionFormula>
    <errorMessage>Active deliveries require an instructor</errorMessage>
</ValidationRule>