SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/validationRules/Org_numbers_gap_is_reasonable.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_numbers_gap_is_reasonable</fullName>
    <active>true</active>
    <description>I&apos;m assuming a class with 100 students is the max</description>
    <errorConditionFormula>VALUE(OrgLastNumber__c) - VALUE(OrgFirstNumber__c) &gt; 100</errorConditionFormula>
    <errorMessage>The org numbers have a big gap, please review. Max: 100</errorMessage>
</ValidationRule>