SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/validationRules/Org_numbers_must_increase.validationRule-meta.xml
<ValidationRule>
    <fullName>Org_numbers_must_increase</fullName>
    <active>true</active>
    <errorConditionFormula>VALUE(OrgFirstNumber__c) &gt;  VALUE(OrgLastNumber__c) - 1</errorConditionFormula>
    <errorMessage>Last org number must be greater than Org start number</errorMessage>
</ValidationRule>