SALESFORCE/force-apps/deploy/main/default/objects/Delivery__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InstructorName__c</columns>
    <columns>IsActive__c</columns>
    <columns>OrgFirstNumber__c</columns>
    <columns>OrgLastNumber__c</columns>
    <columns>CurrentExercise__c</columns>
    <columns>CurrentExerciseIsActive__c</columns>
    <columns>CurrentExerciseStart__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>